Доработана валидация входных данных, рефакторинг